--- a/style.css
+++ b/style.css
@@ -36,3 +36,8 @@ body{
     border-radius: 7px;
     cursor: pointer;
 }
+#dispCurrentSong{
+    border: 2px solid red;
+    width: 80%;
+    height: 200px;
+}
